Ensure scrollbar groove is different to splitter

--- a/MaterialSkin/HTML/material/html/css/light-scrollbar.css
+++ b/MaterialSkin/HTML/material/html/css/light-scrollbar.css
@@ -8,7 +8,7 @@
 ::-webkit-scrollbar {
     height: 10px;
     width: 10px;
-    background: #ddd;
+    background: #c0c0c0;
 }
 
 ::-webkit-scrollbar-thumb {
